--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-name: Your New Jekyll Site
-description: Blogging about stuffs
-meta_description: "Your New Jekyll Site, Blogging about stuffs"
+name: Abhishek Kandoi
+description: Computer Science Undergrad at IIT Roorkee
+meta_description: "Abhishek Kandoi. Computer Science Undergrad at IIT Roorkee"
 
 aboutPage: true
 
@@ -9,15 +9,15 @@ highlighter: pygments
 
 paginate: 20
 baseurl: /
-domain_name: 'http://yourblog-domain.com'
+domain_name: 'http://abhishekkandoi.com'
 google_analytics: 'UA-XXXXXXXX-X'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
 
 # Details for the RSS feed generator
-url:            'http://your-blog-url.example.com'
-author:         'Your Name'
-authorTwitter:  'YourTwitterUsername'
+url:            'http://abhishekkandoi.com'
+author:         'Abhishek Kandoi'
+authorTwitter:  'kandoiabhi'
 
 permalink:       /:year/:title/
 
