--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ highlighter: pygments
 paginate: 20
 baseurl: /
 domain_name: 'http://abhishekkandoi.com'
-google_analytics: 'UA-XXXXXXXX-X'
+google_analytics: 'UA-40358802-1'
 disqus: false
 disqus_shortname: 'your-disqus-shortname'
 
